<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TotalPrice">

    <EditText
        android:id="@+id/autoPriceEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_auto_price"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/loanTermEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/loan_term_months"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/autoPriceEditText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/interestRateEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/interest_rate"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loanTermEditText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/cashIncentivesEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/cash_incentives"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/interestRateEditText"
        android:autofillHints="" />


    <EditText
        android:id="@+id/downPaymentEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/down_payment"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cashIncentivesEditText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/tradeInValueEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/trade_in_value"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/downPaymentEditText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/tradeInAmountOwedEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount_owed_on_trade_in"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tradeInValueEditText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/salesTaxEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/sales_tax"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tradeInAmountOwedEditText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/otherFeesEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/other_fees"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/salesTaxEditText"
        android:autofillHints="" />


    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/otherFeesEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="calculatePrice"/>

    <!-- Add a TextView to display the total price -->
    <!-- TextView to display sales tax -->
    <TextView
        android:id="@+id/monthlyPaymentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly_paymenttotal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/calculateButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/salesTaxTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sales_taxtotal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/monthlyPaymentTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/downPaymentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down_paymenttotal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/salesTaxTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/totalLoanTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_loan_amounttotal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/downPaymentTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/totalLoanPaymentsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_loan_paymentstotal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/totalLoanTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/totalLoanInterestTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_loan_interesttotal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/totalLoanPaymentsTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/totalCostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_costtotal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/totalLoanInterestTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>

