<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Tips">

    <TextView
        android:id="@+id/tip1TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_loan_tip_1"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:lineSpacingExtra="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tip2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_loan_tip_2"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:lineSpacingExtra="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip1TextView"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tip3TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_loan_tip_3"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:lineSpacingExtra="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip2TextView"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tip4TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_loan_tip_4"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:lineSpacingExtra="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip3TextView"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tip5TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_loan_tip_5"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:lineSpacingExtra="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip4TextView"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tip6TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_loan_tip_6"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:lineSpacingExtra="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip5TextView"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tip7TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_loan_tip_7"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:lineSpacingExtra="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip6TextView"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tip8TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_loan_tip_8"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:lineSpacingExtra="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip7TextView"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tip9TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_loan_tip_9"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:lineSpacingExtra="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip8TextView"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tip10TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_loan_tip_10"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:lineSpacingExtra="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip9TextView"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
