<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MonthlyPayment">

    <EditText
        android:id="@+id/monthlyPaymentEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_monthly_payment"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:autofillHints="Enter Monthly Payment" />

    <EditText
        android:id="@+id/loanTermEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/loan_term_months"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monthlyPaymentEditText"
        android:autofillHints="Enter Loan Term" />


    <Button
        android:id="@+id/calculateTotalCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/loanTermEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="calculateTotalCost"/>

    <!-- Add a TextView to display the total price -->
    <!-- TextView to display sales tax -->
    <TextView
        android:id="@+id/monthlyPaymentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly_paymenttextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/calculateTotalCost"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/loanTermTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loan_term"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/monthlyPaymentTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"/>



    <TextView
        android:id="@+id/totalCostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_cost"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/loanTermTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>

