<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTotalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onTotalPriceClick"
        app:cardCornerRadius="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textSize="24sp"
            android:padding="16dp"
            android:gravity="center"
            android:textColor="@android:color/black"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMonthlyPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardViewTotalPrice"
        android:layout_marginBottom="16dp"
        android:onClick="onMonthlyPaymentClick"
        app:cardCornerRadius="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monthly_payment"
            android:textSize="24sp"
            android:padding="16dp"
            android:gravity="center"
            android:textColor="@android:color/black"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardViewMonthlyPayment"
        android:layout_marginBottom="16dp"
        android:onClick="onTips"
        app:cardCornerRadius="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips"
            android:textSize="24sp"
            android:padding="16dp"
            android:gravity="center"
            android:textColor="@android:color/black"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardViewTips"
        android:onClick="onAbout"
        app:cardCornerRadius="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="24sp"
            android:padding="16dp"
            android:gravity="center"
            android:textColor="@android:color/black"/>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/car"
        android:layout_width="235dp"
        android:layout_height="491dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-28dp"
        app:srcCompat="@drawable/car" />


</RelativeLayout>
